# RobotKinematic

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  install_dependencies.sh
include/: ccd_inverse_kinematics.hpp  inverse_kinematics.hpp  link.hpp  planner.hpp  renderer.hpp  robot.hpp  window.hpp  window_transform.hpp
src/: ccd_inverse_kinematics.cpp  link.cpp  main.cpp  planner.cpp  renderer.cpp  robot.cpp  robot2.cpp  window.cpp  window_transform.cpp
